--- a/css/index.css
+++ b/css/index.css
@@ -11,21 +11,24 @@ nav{
 nav ul {
     margin: 0;
     list-style: none;
+    float: right;
 }
 nav ul li{
     display: inline-block;
     line-height: 50px;
     height: inherit;
-    float: right;
+    /* float: right; */
     margin-right: 20px;
 }
 
-nav ul li a{
+nav ul li a,.logo a{
     line-height: 50px;
     text-decoration: none;
+    color: #fff;
 }
-nav ul li.logo{
+nav .logo{
     float: left;
+    margin-left: 20px;
 }
 
 #banner .inner{ /*让div和div中的内容居中*/
@@ -48,5 +51,149 @@ button{
 }
 
 #banner .inner .more{
-    margin-top: 320px;
+    margin-top: 260px;
+}
+.sub-heading{
+    line-height: 30px;
+    margin: 30px 0;
+}
+.logo{
+    font-size: 20px;
+    letter-spacing: 1px;
+    font-weight: bold;
+}
+.green-section{
+    background: #6e849b;
+    text-align: center;
+    color: #fff;
+    padding: 100px 0;
+}
+ .wrapper{
+    max-width: 1080px;
+    margin: 0 auto;
+}
+h2{
+    font-size: 30px;
+    margin: 0;
+}
+h3{
+    font-size: 24px;
+}
+.hr{
+    width: 100%;
+    height: 2px;
+    margin: 0 auto;
+}
+.green-section .hr{
+    background: #6d7b89ff;
+    margin: 20px auto;
+    width: 60%;
+}
+.icon-group {
+    margin-top: 20px;
+}
+.icon-group .icon{
+    display: inline-block;
+    width: 80px;
+    height: 80px;
+    background: grey;
+    margin: 20px; 
+    transform: rotate(45deg);
+}
+.gray-section{
+    background-color: #252f34;
+    color: #fff;
+}
+.gray-section .img-section{
+    width: 45%;
+}
+.gray-section .img-section img{
+    width:100%;
+}
+.gray-section .text-section{/*会导致宽度溢出，解决办法可以用padding或者限制子元素宽度*/
+    width: 55%;
+    position: relative;
+    top: 68px;
+    left: 50px;
+}
+ .article-preview > div{ /*article-preview下一级的div*/
+    float: left;
+    font-size: 0;/*字体大小会导致出现间隙*/
+}
+.clearfix::after{
+    content: '';
+    display: block;
+    clear: both;
+}
+
+.article-preview:after{ /*父级清除浮动*/
+    content: '';
+    display: block;
+    clear: both;
+}
+.gray-section .text-section h2{/* 用padding解决 */
+    /* padding-top: 68px;
+    padding-left: 50px; */
+}
+.gray-section .text-section .sub-heading{
+    /* padding-left: 50px; */
+    font-size: 24px;
+    margin-top: 20px;
+
+}
+.gray-section .text-section p{
+    /* padding-left: 50px; */
+    font-size: 18px;
+    letter-spacing: 1px;
+}
+
+.gray-section .text-section > *{/* 限制子元素高度解决 */
+    width: 90%;
+}
+.article-preview:nth-child(odd){
+    background-color: rgba(255,255,255,0.05);
+}
+.purple-section{
+    background:#7c687c;
+    color: #fff;
+    padding: 100px;
+    min-height: 700px;
+}
+.heading-wrapper{
+    text-align: center;
+}
+.heading-wrapper .hr{
+    background: #6e596e;
+    width: 60%;
+    margin: 30px auto;
+}
+/* .card-group{
+    height: 100%;
+} */
+
+.card{
+    width: 50%;
+    min-height: 300px;
+    float: left;
+    padding: 50px;
+    /* border: 1px solid #fff; */
+    box-sizing: border-box;
+}
+.card p{
+    font-size: 18px;
+    letter-spacing: 1px;
+}
+
+.card:first-child{
+    background: rgba(0,0,0,0.04);
+    /* background: rgba(255,255,255,0.04); */
+}
+.card:nth-child(2){
+    background: rgba(0,0,0,0.08);
+}
+.card:nth-child(3){
+    background: rgba(0,0,0,0.12);
+}
+.card:nth-child(4){
+    background: rgba(0,0,0,0.16);
 }
